[package]
name = "img-proxy"
version = "0.6.3"
authors = ["Evgeny Kuzyakov <ek@nearprotocol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = "0.11.1"
env_logger = "0.9"
chrono = "0.4"
log = "0.4"
borsh = "0.9"
sha2 = "0.10"
hex = "0.4"
base64 = "0.13"
